# serde-cpp_legacy

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt  Config.cmake.in
lib/serde/: CMakeLists.txt
lib/serde/include/serde/: ser.h  ser.hpp  serde.h  serde.hpp
lib/serde/include/serde/de/: builtin.h
lib/serde/include/serde/ser/: builtin.h  builtin.hpp  error.hpp  serialize.hpp  serializer.hpp
lib/serde/test/: CMakeLists.txt  basic.cpp
lib/serde_gen/: CMakeLists.txt
lib/serde_json/: CMakeLists.txt
lib/serde_json/include/serde_json/: de_json.hpp  ser.hpp  ser_json.hpp  serde_json.hpp
lib/serde_json/include/serde_json/detail/: de_detail.hpp  ser_detail.hpp
lib/serde_json/include/serde_json/ser/: error.hpp  serializer.hpp
lib/serde_json/src/: deserializer_json.cpp  serializer_json.cpp
lib/serde_json/test/: CMakeLists.txt  advanced.cpp  basic.cpp  builtin.cpp  types.cpp  types.hpp
lib/serde_yaml/: CMakeLists.txt
lib/serde_yaml/src/: deserializer_yaml.cpp  serializer_yaml.cpp
lib/serde_yaml/test/: CMakeLists.txt  std.cpp
serde-cpp/: CMakeLists.txt
serde-cpp/serde/: CMakeLists.txt
serde-cpp/serde_gen/: CMakeLists.txt
